temporary commit not finished yet in the middle of adding ldap

--- a/auth-service/src/main/resources/bootstrap.yml
+++ b/auth-service/src/main/resources/bootstrap.yml
@@ -5,11 +5,12 @@ spring:
     config:
       uri: http://localhost:8345
       name: auth
-      failFast: true
+      fail-fast: true
     consul:
       host: localhost
       port: 8500
-
-
-
-
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    username: postgres
+    password: password
+    url: jdbc:postgresql://localhost:5432/postgres
