--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -8,7 +8,7 @@
         <groupId>com.rostyslav</groupId>
         <artifactId>microservices-starter</artifactId>
         <version>1.0</version>
-        <relativePath/>
+        <relativePath>../microservices-starter/pom.xml</relativePath>
     </parent>
     <groupId>com.rostyslav</groupId>
     <artifactId>auth-service</artifactId>
@@ -16,17 +16,44 @@
     <version>0.0.1</version>
     <name>auth-service</name>
 
-    <properties>
-        <start-class>com.rostyslav.auth.AuthApplication</start-class>
-    </properties>
-
     <dependencies>
 
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-consul-discovery</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-ldap</artifactId>
+            <version>2.6.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
+        </dependency>
+        <!-- <dependency>
+             <groupId>org.springframework.cloud</groupId>
+             <artifactId>spring-cloud-starter-consul-discovery</artifactId>
+         </dependency>-->
+        <!-- API, java.xml.bind module -->
+        <dependency>
+            <groupId>jakarta.xml.bind</groupId>
+            <artifactId>jakarta.xml.bind-api</artifactId>
+            <version>2.3.2</version>
+        </dependency>
+
+        <!-- Runtime, com.sun.xml.bind module -->
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>2.3.2</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -78,6 +105,17 @@
             <artifactId>common-security</artifactId>
         </dependency>
     </dependencies>
+    <properties>
+        <start-class>com.rostyslav.auth.AuthApplication</start-class>
+    </properties>
+    <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
+    <!-- https://mvnrepository.com/artifact/org.teiid/spring-data-postgresql -->
+
+    <dependency>
+        <groupId>org.springframework.data</groupId>
+        <artifactId>spring-data-jpa</artifactId>
+        <version>2.6.1</version>
+    </dependency>
 
 
     <build>
