--- a/backend-service-2/pom.xml
+++ b/backend-service-2/pom.xml
@@ -8,7 +8,7 @@
         <groupId>com.rostyslav</groupId>
         <artifactId>microservices-starter</artifactId>
         <version>1.0</version>
-        <relativePath/>
+        <relativePath>../microservices-starter/pom.xml</relativePath>
     </parent>
 
     <groupId>com.rostyslav</groupId>
@@ -26,9 +26,13 @@
     <dependencies>
 
         <dependency>
-
             <groupId>com.rostyslav</groupId>
             <artifactId>common-security</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
         </dependency>
 
         <dependency>
