--- a/common-security/pom.xml
+++ b/common-security/pom.xml
@@ -12,7 +12,7 @@
         <groupId>com.rostyslav</groupId>
         <artifactId>microservices-starter</artifactId>
         <version>1.0</version>
-        <relativePath/>
+        <relativePath>../microservices-starter/pom.xml</relativePath>
     </parent>
 
     <dependencies>
@@ -30,7 +30,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
-
         </dependency>
 
         <dependency>
@@ -42,25 +41,18 @@
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
         </dependency>
-
-
     </dependencies>
     <build>
-        <pluginManagement>
-
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.0</version>
+                    <version>3.9.0</version>
                     <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
-
+                        <source>17</source>
+                        <target>17</target>
                     </configuration>
                 </plugin>
             </plugins>
-
-        </pluginManagement>
     </build>
 </project>
