--- a/config-service/pom.xml
+++ b/config-service/pom.xml
@@ -24,15 +24,15 @@
         <groupId>com.rostyslav</groupId>
         <artifactId>microservices-starter</artifactId>
         <version>1.0</version>
-        <relativePath/>
+        <relativePath>../microservices-starter/pom.xml</relativePath>
     </parent>
 
     <dependencies>
 
-        <dependency>
+       <!-- <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-consul-discovery</artifactId>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
