--- a/config-service/src/main/resources/config/auth.yml
+++ b/config-service/src/main/resources/config/auth.yml
@@ -8,7 +8,14 @@ spring:
     admin:
       client:
         url: "http://localhost:9000"
-
+  datasource:
+    jpa:
+      show-sql: true
+      generate-ddl: true
+      hibernate:
+        ddl-auto: create-drop
+      database: postgresql
+      database-platform: org.hibernate.dialect.PostgreSQLDialect
 management:
   endpoints:
     web:
