--- a/discovery-service/pom.xml
+++ b/discovery-service/pom.xml
@@ -7,7 +7,7 @@
         <groupId>com.rostyslav</groupId>
         <artifactId>microservices-starter</artifactId>
         <version>1.0</version>
-        <relativePath/>
+        <relativePath>../microservices-starter/pom.xml</relativePath>
     </parent>
 
     <groupId>com.rostyslav</groupId>
@@ -32,7 +32,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-netflix-eureka-client</artifactId>
-            <version>2.0.0.M8</version>
+            <version>3.1.0</version>
         </dependency>
 
         <dependency>
