--- a/microservices-starter/pom.xml
+++ b/microservices-starter/pom.xml
@@ -6,33 +6,33 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.3</version>
+        <version>3.0.0-RC2</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.rostyslav</groupId>
     <artifactId>microservices-starter</artifactId>
-    <version>1.0</version>
+    <version>2.0</version>
     <packaging>pom</packaging>
 
     <modules>
-        <module>../auth-service</module>
+       <!-- <module>../auth-service</module>
         <module>../backend-service</module>
         <module>../backend-service-2</module>
-        <module>../common-security</module>
+        <module>../common-security</module>-->
         <module>../config-service</module>
         <module>../dashboard-service</module>
-        <module>../discovery-service</module>
-        <module>../gateway-service</module>
-        <module>../registration-service</module>
+        <!-- <module>../discovery-service</module>
+         <module>../gateway-service</module>
+         <module>../registration-service</module>-->
     </modules>
 
     <properties>
         <java.version>17</java.version>
+        <spring.boot.version>3.0.0-RC2</spring.boot.version>
         <maven.compiler.forceJavacCompilerUse>true</maven.compiler.forceJavacCompilerUse>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <cloud.dependencies.version>2021.0.0</cloud.dependencies.version>
         <javax.servlet.version>3.1.0</javax.servlet.version>
         <lombok.version>1.18.22</lombok.version>
         <lombok-mvn.version>1.18.0.0</lombok-mvn.version>
@@ -42,7 +42,6 @@
         <spring.cloud.starter.config.version>3.1.0</spring.cloud.starter.config.version>
         <spring.boot.admin.server.version>2.6.2</spring.boot.admin.server.version>
         <spring.boot.admin.client.version>2.6.2</spring.boot.admin.client.version>
-        <spring.boot.starter.actuator.version>2.0.1.RELEASE</spring.boot.starter.actuator.version>
         <spring.boot.starter.web.version>2.6.3</spring.boot.starter.web.version>
         <spring.boot.starter.security.version>2.0.1.RELEASE</spring.boot.starter.security.version>
         <spring.boot.maven.plugin.version>2.0.0.RELEASE</spring.boot.maven.plugin.version>
@@ -54,41 +53,87 @@
         <spring-cloud-starter-netflix-eureka-server.version>3.1.0</spring-cloud-starter-netflix-eureka-server.version>
         <spring-cloud-starter-netflix-eureka-client.version>3.1.4</spring-cloud-starter-netflix-eureka-client.version>
         <spring-cloud-starter-bootstrap.version>3.1.5</spring-cloud-starter-bootstrap.version>
+
+        <spring-cloud-dependencies.version>2022.0.0-RC3</spring-cloud-dependencies.version>
+        <spring-cloud-config-server.version>4.0.0-RC3</spring-cloud-config-server.version>
+        <spring-cloud-config-client.version>4.0.0-RC3</spring-cloud-config-client.version>
+        <spring-cloud-consul-dependencies.version>4.0.0-RC3</spring-cloud-consul-dependencies.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
     <dependencyManagement>
+
         <dependencies>
+            <!--Spring boot 3.0.0-->
             <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-bootstrap</artifactId>
-                <version>${spring-cloud-starter-bootstrap.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>com.rostyslav</groupId>
-                <artifactId>common-security</artifactId>
-                <version>${common.security.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${cloud.dependencies.version}</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>3.0.0-RC2</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
 
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-                <version>${spring-cloud-starter-netflix-eureka-server.version}</version>
+                <artifactId>spring-cloud-starter-sleuth</artifactId>
+            </dependency>
+
+            <!--Spring cloud 2022-->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud-dependencies.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <!--Config service dependencies-->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-config-server</artifactId>
+                <version>${spring-cloud-config-server.version}</version>
             </dependency>
 
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-                <version>${spring-cloud-starter-netflix-eureka-client.version}</version>
+                <artifactId>spring-cloud-config-client</artifactId>
+                <version>${spring-cloud-config-client.version}</version>
             </dependency>
+
+            <!--Consul discovery dependencies-->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-consul-dependencies</artifactId>
+                <version>${spring-cloud-consul-dependencies.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <!--Common security library-->
+            <dependency>
+                <groupId>com.rostyslav</groupId>
+                <artifactId>common-security</artifactId>
+                <version>${common.security.version}</version>
+            </dependency>
+
+
+            <!-- https://mvnrepository.com/artifact/de.codecentric/spring-boot-admin-starter-server -->
+            <dependency>
+                <groupId>de.codecentric</groupId>
+                <artifactId>spring-boot-admin-starter-server</artifactId>
+                <version>3.0.0-M5</version>
+            </dependency>
+
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -141,46 +186,11 @@
             </dependency>
 
             <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-config</artifactId>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-config</artifactId>
-                <version>${spring.starter.config.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-config-server</artifactId>
-                <version>3.1.0</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-config-client</artifactId>
-                <version>3.1.0</version>
-            </dependency>
-
-
-            <dependency>
-                <groupId>de.codecentric</groupId>
-                <artifactId>spring-boot-admin-starter-server</artifactId>
-                <version>${spring.boot.admin.server.version}</version>
-            </dependency>
-
-            <dependency>
                 <groupId>de.codecentric</groupId>
                 <artifactId>spring-boot-admin-starter-client</artifactId>
                 <version>${spring.boot.admin.client.version}</version>
             </dependency>
 
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-actuator</artifactId>
-                <version>${spring.boot.starter.actuator.version}</version>
-            </dependency>
 
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
@@ -189,9 +199,9 @@
             </dependency>
 
             <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-sleuth</artifactId>
-                <version>3.1.0</version>
+                <groupId>io.micrometer</groupId>
+                <artifactId>micrometer-tracing-bom</artifactId>
+                <version>1.0.0-RC1</version>
             </dependency>
 
             <dependency>
