--- a/config-service/pom.xml
+++ b/config-service/pom.xml
@@ -7,56 +7,37 @@
 
     <groupId>com.rostyslav</groupId>
     <artifactId>config-service</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2</version>
     <packaging>jar</packaging>
     <name>config-service</name>
-    <description>config service, retrieve config files from file system</description>
+    <description>Configuration management service, retrieve config files from file system</description>
 
     <properties>
         <start-class>
             com.rostyslav.configservice.ConfigServiceApplication
         </start-class>
-
     </properties>
-
 
     <parent>
         <groupId>com.rostyslav</groupId>
         <artifactId>microservices-starter</artifactId>
-        <version>1.0</version>
+        <version>2.0</version>
         <relativePath>../microservices-starter/pom.xml</relativePath>
     </parent>
 
     <dependencies>
 
-       <!-- <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-consul-discovery</artifactId>
-        </dependency>-->
-
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-config-server</artifactId>
-
-        </dependency>
-
-        <dependency>
-            <groupId>de.codecentric</groupId>
-            <artifactId>spring-boot-admin-starter-client</artifactId>
         </dependency>
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-zipkin</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-sleuth</artifactId>
+            <artifactId>spring-cloud-starter-consul-discovery</artifactId>
         </dependency>
 
     </dependencies>
-
 
     <build>
         <plugins>
@@ -86,6 +67,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
