--- a/config-service/src/main/resources/application.yml
+++ b/config-service/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 server:
   port: 8345
+  servlet:
+    context-path: /
 spring:
   profiles:
     active: native
@@ -8,3 +10,25 @@ spring:
       server:
        native:
         searchLocations: "[classpath:/, classpath:/config, classpath:/config/{application}, classpath:/config/{application}/{profile}]"
+    consul:
+      host: localhost
+      port: 8500
+      discovery:
+        prefer-ip-address: true
+        health-check-path: ${server.servlet.context-path}actuator/health
+        health-check-interval: 15s
+        health-check-timeout: 90s
+        health-check-critical-timeout: 3m
+        instanceId: ${spring.application.name}-${server.port}-${spring.cloud.client.ip-address}
+  application:
+    name: configuration-service
+  config:
+    name: config
+    location: classpath:/
+
+logging:
+  level:
+    springframework:
+      web: debug
+  path:  /var/log
+  file: ${spring.application.name}.log
