--- a/config-service/src/main/resources/config/dashboard.yml
+++ b/config-service/src/main/resources/config/dashboard.yml
@@ -1,6 +1,3 @@
-server:
-  port: 9000
-
 management:
   security:
     enabled: false
@@ -11,3 +8,15 @@ management:
   endpoint:
     health:
       show-details: ALWAYS
+spring:
+  cloud:
+    consul:
+      host: localhost
+      port: 8500
+      discovery:
+        prefer-ip-address: true
+        health-check-path: /actuator/health
+        health-check-interval: 15s
+        health-check-timeout: 90s
+        health-check-critical-timeout: 3m
+        instanceId: ${spring.application.name}-${server.port}-${spring.cloud.client.ip-address}
