--- a/microservices-starter/pom.xml
+++ b/microservices-starter/pom.xml
@@ -17,33 +17,25 @@
     <packaging>pom</packaging>
 
     <modules>
-        <!-- <module>../auth-service</module>
-         <module>../backend-service</module>
-         <module>../backend-service-2</module>
-         -->
+        <module>../auth-service</module>
+        <module>../book-service</module>
+        <module>../backend-service-2</module>
         <module>../common-security</module>
         <module>../config-service</module>
         <module>../dashboard-service</module>
         <module>../gateway-service</module>
-
     </modules>
 
     <properties>
+        <start-class></start-class>
         <java.version>17</java.version>
         <spring.boot.version>3.0.0-RC2</spring.boot.version>
         <maven.compiler.forceJavacCompilerUse>true</maven.compiler.forceJavacCompilerUse>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <javax.servlet.version>3.1.0</javax.servlet.version>
-        <lombok.version>1.18.22</lombok.version>
-        <lombok-mvn.version>1.18.0.0</lombok-mvn.version>
-        <jsonwebtoken.version>0.9.0</jsonwebtoken.version>
         <spring.boot.maven.plugin.version>2.0.0.RELEASE</spring.boot.maven.plugin.version>
         <maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
         <versions.maven.plugin.version>2.5</versions.maven.plugin.version>
-        <common.security.version>0.1-SNAPSHOT</common.security.version>
         <maven.compiler.plugin.version>3.9.0</maven.compiler.plugin.version>
-        <start-class></start-class>
-
         <spring-cloud-dependencies.version>2022.0.0-RC3</spring-cloud-dependencies.version>
         <spring-cloud-config-server.version>4.0.0-RC3</spring-cloud-config-server.version>
         <spring-cloud-config-client.version>4.0.0-RC3</spring-cloud-config-client.version>
@@ -113,7 +105,7 @@
             <dependency>
                 <groupId>com.rostyslav</groupId>
                 <artifactId>common-security</artifactId>
-                <version>${common.security.version}</version>
+                <version>0.2</version>
             </dependency>
 
             <!--Spring monitoring-->
@@ -123,52 +115,34 @@
                 <version>3.0.0-M5</version>
             </dependency>
 
-            <!--Common dependencies-->
-
-            <dependency>
-                <groupId>javax.servlet</groupId>
-                <artifactId>javax.servlet-api</artifactId>
-                <version>${javax.servlet.version}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok-maven</artifactId>
-                <version>${lombok-mvn.version}</version>
-                <type>pom</type>
-            </dependency>
-
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <version>${lombok.version}</version>
-
-            </dependency>
-
-            <dependency>
-                <groupId>io.jsonwebtoken</groupId>
-                <artifactId>jjwt</artifactId>
-                <version>${jsonwebtoken.version}</version>
-            </dependency>
-
-
-
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-zuul</artifactId>
-                <version>1.4.7.RELEASE</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-zipkin</artifactId>
-                <version>2.2.8.RELEASE</version>
-            </dependency>
-
             <dependency>
                 <groupId>io.micrometer</groupId>
                 <artifactId>micrometer-tracing-bom</artifactId>
                 <version>1.0.0-RC1</version>
+            </dependency>
+
+            <!--Common dependencies-->
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-api</artifactId>
+                <version>0.11.5</version>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-impl</artifactId>
+                <version>0.11.5</version>
+                <scope>runtime</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt-jackson</artifactId> <!-- or jjwt-gson if Gson is preferred -->
+                <version>0.11.5</version>
+                <scope>runtime</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.glassfish.jaxb</groupId>
+                <artifactId>jaxb-runtime</artifactId>
+                <version>4.0.0</version>
             </dependency>
 
             <dependency>
